--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
-<p>Hello 大家好</p>
-<p>我是是我的个人网站。 </p>
-<p>很高兴你来到这里, 你可以在以下的网站找到我</p>
+<!doctype html>
+<html>
+<head>
+<meta charset="utf-8">
+<title>伴头青店标</title>
+</head>
 
-<ul>
-  <li> <a href="https://www.zhihu.com/people/AJLoveChina">知乎</a> </li>
-  <li> <a href="http://hejie.nigeerhuo.com">我的博客(已经不更细了,现在在知乎写文章)</a> </li>
-</ul>
-
-作者：霸都丶傲天
-链接：https://zhuanlan.zhihu.com/p/91652100
-来源：知乎
-著作权归作者所有，转载请联系作者获得授权。
+<body>
+<img src="伴头青服饰店招.jpg" width="950" height="120" alt=""/>
+<table width="950" height="120" border="0">
+  <tbody>
+    <tr>
+      <th scope="col">&nbsp;</th>
+    </tr>
+  </tbody>
+</table>
+</body>
+</html>
