--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 <table width="950" height="120" border="0">
   <tbody>
     <tr>
-      <th scope="col">&nbsp;</th>
+      <th scope="col">上面是一个950*120的图标<br>
+        &nbsp;</th>
     </tr>
   </tbody>
 </table>
